--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "api-design-node",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +12,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.1",
     "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
