--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "api-design-node",
   "version": "1.0.0",
+  "license": "ISC",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
   },
