Add build and start commands

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "lib": ["esnext"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": ["src/**/*.ts"]
 }
